--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 bin/*
 servlet/web/WEB-INF/lib/realHTMLconnector.jar
 docker/testWorkspace/.naturalone/log/*.log
+realHTML4NaturalCore/bin/realHTML4NaturalNatCaller
