--- a/servlet/web/WEB-INF/web.xml
+++ b/servlet/web/WEB-INF/web.xml
@@ -93,7 +93,7 @@
         </init-param>
         <init-param>
             <param-name>cors.allowed.headers</param-name>
-            <param-value>Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,Connection,Content-Type,Host,Origin,Referer,Token-Id,User-Agent, X-Requested-With</param-value>
+            <param-value>Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,Connection,Content-Type,Host,Origin,Referer,Token-Id,User-Agent,X-Requested-With,webBDEToken</param-value>
         </init-param>
     </filter>
     <filter-mapping>
