--- a/java/Connector/.classpath
+++ b/java/Connector/.classpath
@@ -7,17 +7,11 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/jsp-api.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/servlet-api.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/json-20180813.jar"/>
+	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/home/tom/Documents/Java/apache-tomcat-9.0.16/lib/websocket-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
