--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ java/Connector/WebContent/WEB-INF/lib/realHTMLconnector.jar
 docker/testWorkspace/.naturalone/log/*.log
 realHTML4NaturalCore/bin/realHTML4NaturalNatCaller
 cker/testWorkspace/.naturalone/*
+config.log
+autom4te.cache
+config.status
+configure~
+Makefile
