--- a/Makefile.in
+++ b/Makefile.in
@@ -1,30 +1,22 @@
-#CC = /usr/vac/bin/xlc
-CC = gcc
+CC = @CC@
+AR = @AR@
 
-AR = /usr/bin/ar
-
-JAR = jar
-#JAR = /usr/java8_64/bin/jar
-
-#JAVAC = /usr/java8_64/bin/javac
-JAVAC = javac
-
-#JAVAH = /usr/java8_64/bin/javah
-JAVAH = javah
+JAR = @JAR@
+JAVAC = @JAVAC@
+JAVAH = @JAVAH@
 
 #XLC: 
 #LFLAGS1_SO = -G
 #LFLAGS2_SO = 
 
 #GCC:
-LFLAGS1_SO = -shared 
+LFLAGS1_SO = @LFLAGS1_SO@
 LFLAGS2_SO = 
 
 RH4NCLASSPATH = ./bin/servlet/lib:./java/Connector/WebContent/WEB-INF/lib/json-20180813.jar:./java/Connector/WebContent/WEB-INF/lib/commons-io-1.3.2.jar:./java/Connector/WebContent/WEB-INF/lib/log4j-api-2.11.1.jar:./java/Connector/WebContent/WEB-INF/lib/log4j-core-2.11.1.jar:./java/Connector/WebContent/WEB-INF/lib/log4j-web-2.3.jar:./java/Connector/WebContent/WEB-INF/lib/servlet-api.jar:./java/Connector/WebContent/WEB-INF/lib/jsp-api.jar:./java/Connector/WebContent/WEB-INF/lib/websocket-api.jar
 CLASSPATH = "$(TOMCATCLASSPATH):$(RH4NCLASSPATH)"
 
-#JNIINCLUDE = -I/usr/java8_64/include/ -I/usr/java8_64/include//linux/
-JNIINCLUDE = -I/usr/lib/jvm/java/include/ -I/usr/lib/jvm/java/include/linux/
+JNIINCLUDE = @JAVA_INCLUDE@
 
 
 INCLUDE = -I./realHTML4NaturalCore/include/ \
@@ -43,12 +35,6 @@ LIBS = -L./realHTML4NaturalCore/bin/libs -L./bin/libs \
 	   -ldl -lrh4nmessaging -lrh4njnijsonconverter -lrh4nutils -lrh4nlogging -lrh4nvar2name -lrh4nvars -lrh4nldaparser \
 	   -lrh4njsongenerator -lcrypt -lrh4nlogging
 
-#XLC:
-#CARGS1 = -g -c -fpic $(INCLUDE)
-#CARGS2 = 
-#CARGS_SO = -c -g -fpic $(INCLUDE)
-
-#GCC:
 CARGS1 = -g -c -fpic $(INCLUDE)
 CARGS2 = 
 CARGS_SO = -c -g -fpic $(INCLUDE)
