--- a/configure.in
+++ b/configure.in
@@ -4,6 +4,8 @@ m4_include([m4/ax_jni_include_dir.m4])
 
 AC_PROG_CC()
 
+AC_CHECK_HEADERS([poll.h sys/inotify.h libgen.h])
+
 AC_PATH_TOOL([AR], [ar])
 AS_IF([test -z "$AR"], AC_MSG_ERROR([ar not found]))
 
