--- a/Makefile.in
+++ b/Makefile.in
@@ -66,7 +66,7 @@ all: core jniLibrary tomcatconnector_warfile
 
 core:
 	@test -f ./realHTML4NaturalCore/Makefile || (echo "Please run ./configure in ./realHTML4NaturalCore first"; exit 1)
-	@cd ./realHTML4NaturalCore && ./configure && make all
+	@cd ./realHTML4NaturalCore && make all
 
 #                         +-----------------+
 #-------------------------| Tomcat Connector|----------------------------------
